# irobo-projects

./: .gitignore  LICENSE  README.md  frames.gv  my_map.pgm  source.sh
docs/images/: A_Star
launch/: turlebot_amcl.launch  turlebot_amcl_origin.launch  turlebot_dataset.launch  turlebot_debug.launch  turlebot_ekf.launch  turlebot_ekf_bag.launch  turlebot_ekf_data.launch  turlebot_ekf_original.launch  turlebot_ella_script.launch  turlebot_gazebo.launch  turlebot_markov.launch  turlebot_markov_robot.launch  turlebot_planning.launch  turlebot_planning_robot.launch  turlebot_planning_test.launch  turlebot_slam.launch  turtlebot3_description.launch
launch/maps/: irobo_map.yaml  lab_1.yaml  simworld_30_v1.yaml  turtle_gmap_28092022.yaml
launch/robot/: start_slam.launch
src/evaluation/: CMakeLists.txt  extract.sh  extract_amcl.sh  extract_error.sh  extract_traj.sh  package.xml  ros_readbagfile.py
src/evaluation/scripts/: plot_amcl.py  plot_cmd.py  plot_error.py  plot_odom.py  plot_traj.py  plot_vel.py  timestamps.md
src/turtle3_gridmap_to_pcl/: CMakeLists.txt  package.xml
src/turtle3_gridmap_to_pcl/launch/: turtle3_gridmap_to_pcl.launch
src/turtle3_gridmap_to_pcl/src/: main.cpp
src/turtlebot3_cmd_smoother/: CMakeLists.txt  package.xml  setup.py
src/turtlebot3_cmd_smoother/src/: turtlebot3_cmd_smoother.py
src/turtlebot3_custom/: CMakeLists.txt  package.xml
src/turtlebot3_custom/config/: gmapping_params.yaml  turtlebot3_lds_2d.lua
src/turtlebot3_custom/launch/: turtlebot3_localization.launch  turtlebot3_localization_only_ekf.launch
src/turtlebot3_custom/maps/: irobo_map.pgm  irobot_new_map_v1.pgm  irobot_new_map_v1.yaml  lab_06102022.pgm  lab_06102022.yaml  lab_1.pgm  lab_big_tiles_v1.pgm  lab_big_tiles_v1.yaml  lab_full_v1.yaml  lab_full_v2.pgm  lab_full_v2.yaml  lab_full_v3_low_res.pgm  lab_full_v3_low_res.yaml  simworld_30_v1.pgm  turtlebot3_irobo.world
src/turtlebot3_custom/params/: amcl.yaml  base_local_planner_params.yaml  costmap_common_params_waffle.yaml  dwa_local_planner_params_waffle.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
src/turtlebot3_custom/rviz/: rviz_cool_config.rviz  turlebot3_config_amcl.rviz  turlebot3_config_lab1.rviz  turlebot3_config_markov.rviz  (+4 more)
src/turtlebot3_markov_decision/: .gitignore  CMakeLists.txt  package.xml  setup.py
src/turtlebot3_markov_decision/launch/: turtlebot3_markov_decision.launch
src/turtlebot3_markov_decision/src/: markov_calculation.py  old.py  turtlebot3_markov_decision.py
src/turtlebot3_scan_to_map/: CMakeLists.txt  package.xml
src/turtlebot3_scan_to_map/src/: turtlebot3_scan_to_map.py
src/turtlebot3_send_nav_goals/: CMakeLists.txt  package.xml
src/turtlebot3_send_nav_goals/launch/: turtlebot3_send_nav_goals.launch
src/turtlebot3_send_nav_goals/src/: main.cpp
src/turtlebot3_viz/: CMakeLists.txt  package.xml  setup.py
src/turtlebot3_viz_scan_match/: CMakeLists.txt  package.xml  setup.py
(+16 files in other folders)
